# easeai

./: .gitignore  CHANGELOG.md  README.md  __init__.py  data.py  minimal_usage.py  plotting.py  pyproject.toml  test_basic.py  tests.yml  workflow.py
easeai/: __init__.py  explain.py  model.py
tests/: test_basic.py  test_import.py
